# task-manager

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  render.yaml
.github/workflows/: task-manager.yml
task_manager/: mixin.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_name.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuse_name.py  0003_rename_statuse_status.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tasks_executor_alter_tasks_labels.py  0004_alter_tasks_labels.py  0005_alter_tasks_executor.py  0006_alter_tasks_executor.py  0007_alter_tasks_executor.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/components/: navbar.html
task_manager/templates/labels/: create_label.html  delete_label.html  index_labels.html  update_label.html
task_manager/templates/statuses/: create_status.html  delete_status.html  index_statuses.html  update_status.html
task_manager/templates/tasks/: create_task.html  delete_task.html  index_tasks.html  show_task.html  update_task.html
task_manager/templates/users/: create_user.html  delete_user.html  index.html  update_user.html
task_manager/users/: forms.py  tests.py  views.py
task_manager/users/migrations/: 0001_initial.py
