[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager is a task management system similar to http://www.redmine.org/."
authors = ["Alexandr Kositskiy <koso-96@mail.ru>"]
readme = "README.md"
repository = "https://github.com/CfyRJ/python-project-52"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "License :: Aladdin Free Public License (AFPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"
whitenoise = "^6.6.0"
django-filter = "^23.5"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
